Fix alignment of grid elements

--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -57,9 +57,9 @@
     margin: 0;
 
     display: grid;
-    justify-content: center;
     grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
     gap: 10px;
+    place-items: center;
     
     list-style-type: none;
 }
